<resources>
    <string name="app_name">Rent a Room</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="username1">UserName</string>
    <string name="fullname">FullName</string>
    <string name="email">E-mail Address</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="phone">Phone Number</string>
    <string name="upload">Upload Your Picture</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="placeText">Featured Places</string>
    <string name="placeText2">Featured Listings</string>
    <string name="seeall">See all ></string>
    <string name="explore">Explore</string>
    <string name="favourite">Favourite</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="pvt_info">Private Information</string>
    <string name="change_photo">Change Photo</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign Out</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="version">Version 1.0.0</string>
    <string name="messages">Messages</string>
    <string name="filter_rooms">Filter Rooms</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="amenities">Amenities</string>
    <string name="rules">Rules</string>
    <string name="next">Next</string>
    <string name="preview">Preview</string>
    <string name="api_map_key">AIzaSyDpKA9u0QK8UZb0DMw1W1uRQTQzeBQd8nk</string>

    <!--Amenities -->
    <string name="wifi">Wifi</string>
    <string name="tv">Tv Channel</string>
    <string name="elevator">Elevator</string>
    <string name="furnished">Furnished</string>
    <string name="parking">Parking</string>
    <string name="air_condition">Air Condition</string>
    <string name="security">Security</string>

    <!--Rules-->
    <string name="drinking">No Drinking</string>
    <string name="drugs">No Drugs</string>
    <string name="pets">No Pets</string>
    <string name="smoking">No Smoking</string>
    <string name="cats">Cats Allowed</string>
    <string name="dogs">Dogs Allowed</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--facebook-->
    <string name="facebook_app_id">306583853176482</string>
    <string name="fb_login_protocol_scheme">fb306583853176482</string>
</resources>
