<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.saugatjonchhen.rentaroom.Login.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/backButtonToolbarSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:src="@drawable/back"
                android:visibility="visible" />

            <TextView
                android:id="@+id/settings_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="#FFF"
                android:textSize="24sp" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="#484848"
        android:textSize="20sp"
        android:padding="10dp"/>

    <LinearLayout
        android:id="@+id/layout_version"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/version"
            android:textColor="#484848"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_help"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/help"
            android:textColor="#484848"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/settings_div1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:id="@+id/layout_sign_out"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_signout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/signout"
            android:textColor="#484848"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>
