<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.saugatjonchhen.rentaroom.NewListing.AskRulesAndAmenitiesFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_new_listings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageButton
            android:id="@+id/imgBtn_back_rules_amenities"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="left"
            android:background="@null"
            android:src="@drawable/back" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/ask_rules_and_amenities_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="What's awesome about your room? What are all the rules?"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/amenities_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/amenities"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/amenities_wifi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/amenities_wifi"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_amenities_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/amenities_tv_channel"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/amenities_tv_channel"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_amenities_tv_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/amenities_air_conditioner"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/amenities_air_conditioner"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_amenities_air_conditioner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/air_condition" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/amenities_elevator"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/amenities_elevator"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_amenities_elevator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elevator" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/amenities_furnished"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/amenities_furnished"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_amenities_furnished"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/furnished" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/amenities_parking"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/amenites_parking"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_amenities_parking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/amenities_security"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/amenities_security"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_amenities_security"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/rules_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/rules"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rules_no_drinking"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rules_drinking"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_rules_no_drinking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drinking" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rules_no_drugs"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rules_drugs"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_rules_no_drugs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drugs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rules_no_pets"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rules_pets"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_rules_no_pets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pets" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rules_no_smoking"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rules_smoking"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_rules_no_smoking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smoking" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rules_cats_allowed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rules_cats_ok"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_rules_cats_allowed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cats" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rules_dogs_allowed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rules_dogs_ok"
                    android:button="@null" />

                <TextView
                    android:id="@+id/txt_rules_dogs_allowed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dogs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next_rules_amenities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/button_color"
        android:text="@string/next"
        android:textColor="@color/white" />

</FrameLayout>
