<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saugatjonchhen.rentaroom.Home.HomeFragment">

    <FrameLayout
        android:id="@+id/homeFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/horizontal_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/place_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="160dp"
                        android:text="@string/placeText"
                        android:textColor="#484848"
                        android:textSize="20sp" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/horizontal_linear"
                    android:layout_marginBottom="15dp"
                    android:scrollbars="none">

                </android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:id="@+id/horizontal_linear2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recycler_view_horizontal"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/place_txt2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/placeText2"
                        android:textColor="#484848"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/seeAll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/seeall"
                        android:textColor="#484848"
                        android:textSize="16sp" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/featured_listings_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/horizontal_linear2"
                    android:layout_marginBottom="5dp"
                    android:scrollbars="none">

                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_btn_add_new_listing"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimaryDark"
            android:src="@android:drawable/ic_input_add" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/SeeAllFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/all_featured_listings_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
    </FrameLayout>
</FrameLayout>

